This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
4/5/17: Fixed Realign to Item going out of Low Dose when realigning to a
polygon map where frame sizes are not the same as the current image sizes;
also enabled staying in Low Dose with change in intensity, exposure, or binning
between the map and current Low Dose parameters (In 3.6).

4/5/17: Prevented progressive change of IS when setting and restoring a state
goes out of and into Low Dose with Balance Shifts on; also improved behavior
of Realign to Item with  Balance Shifts on (In 3.6).

4/5/17: Fixed doubling of values in montage overview from unsigned images,
which solves wraparound of high values and bad scaling when loading maps as
bytes; also fixed another source of bad scaling when loading maps (In 3.6).

3/17/17: Fix having it drop screen for STEM when leaving camera setup even
when not going into STEM (In 3.6).

3/15/17: Properly initialized image shift values when switching to a low dose
imaging state; zero out axis position values > 100 from settings (In 3.6).

3/13/17: Added script commands to change a Navigator item's registration and
to shift items by a given number of microns.

3/2/17: Made it retry once when there is a timeout during fast continuous
acquisition even if CameraRetries is 0 (In 3.6).

3/13/17: SEM_3-6-4
3/13/17: Added properties MaximumSlitWidth to set the maximum width for a GIF
and GIFadjustsForSlitWidth to indicate that SerialEM does not need to adjust
energy shift for changes in slit width; also increased default time interval
for detecting ZLP alignment in DM from 5 to 6 seconds. (In 3.6).

3/9/17: Fixed wrong checkboxes showing up in file-saving option dialog for
Falcon (In 3.6).

3/8/17: Fixed transformations used in Navigator to account for tilted images;