@@ -3,6 +3,12 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+4/6/17: Fixed double-clicking to remove Navigator point with collapse groups
+on (In 3.6).
+
+4/6/17: Added a camera property to enable or disable post-exposure actions for
+one camera; for OneView, post-actions are disabled by default (In 3.6).
+
 4/5/17: Fixed Realign to Item going out of Low Dose when realigning to a
 polygon map where frame sizes are not the same as the current image sizes;
 also enabled staying in Low Dose with change in intensity, exposure, or binning
